--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next-themes": "^0.2.1",
     "npm": "^10.0.0",
     "postcss": "8.4.29",
+    "random-avatar-generator": "^2.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
