--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.2.0",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.4",
@@ -27,6 +28,7 @@
     "install": "^0.13.0",
     "lucide-react": "^0.274.0",
     "next": "13.4.19",
+    "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
     "npm": "^10.0.0",
     "postcss": "8.4.29",
