--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "eslint": "8.48.0",
@@ -42,6 +43,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.3",
     "prisma": "^5.2.0"
   }
 }
