--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.2.0",
     "@radix-ui/react-avatar": "^1.0.3",
