--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@material-tailwind/react": "^2.1.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.3.0",
     "@radix-ui/react-avatar": "^1.0.3",
