--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroicons/react": "^1.0.6",
     "@material-tailwind/react": "^2.1.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.3.0",
@@ -29,6 +28,7 @@
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.2",
     "install": "^0.13.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.274.0",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
